Thu Mar 16 20:55:18 1995  John Gilmore  (gnu at toad.com)

	First cut at Macintosh configuration support.

	* mac-config.cache:  New file, a hand-built autoconf `config.cache'
	file with the right values for building under MPW.
	* mac-config.README:  Documentation for mac-config.cache.
	* mac-pre.in, mac-post.in:  Versions of pre.in and post.in for 
	configuring on MPW.
	* mac-mf.sed:  A `sed' script which will turn carefully constructed
	Unix Makefiles into carefully constructed Macintosh MPW Makefiles.

Wed Mar 3 16:00:00 1995 Keith Vetter (keithv@fusion.com)

	* windows.in: changed included directories to reflect MAC changes

Mon Feb 20 15:48:16 1995 Keith Vetter (keithv@fusion.com)

	* windows.in: changed API to INTERFACE        

Mon Feb 13 23:40:11 1995  Theodore Y. Ts'o  (tytso@dcl)

	* pre.in: Add line for $(LD)

Mon Feb 6 19:33:57 1995 Keith Vetter (keithv@fusion.com)

	* pre.in: Added macros for directory syntax, filename extensions 
	  and what system we're building on (defaults to Unix).
	* post.in: split clean into unix and windows branches
	* windows.in: new file--makefile macros and rules for windows
	* rm.bat: new file--DOS batch file to mimic Unix's rm command

Wed Nov  2 21:04:18 1994  Theodore Y. Ts'o  (tytso@dcl)

	* pre.in: Don't actually add the $(CPPOPTS) flags to CPPFLAGS;
		CPPFLAGS has them defined already.  In fact, don't define
		the CPPOPTS makefile variable at all; we don't need it.

	* pre.in: Add support for a new --with-cppopts" value where you
		can put -DXXXXX such that they are found by autoconf tests
		that use run the preprocessor over header files.

Tue Nov  1 14:11:57 1994    (tytso@rsx-11)

	* post.in (clean): Also clean up config.log, pre.out, post.out and
		Makefile.out 

Thu Oct  6 19:41:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* post.in: add default "check" rule for Makefiles that don't do
		anything else.

	* pre.in: add default all:: rule at the end of pre.in

Thu Aug  4 03:52:23 1994  Tom Yu  (tlyu@dragons-lair)
